# ffmpeg_demo

./: .gitignore  CMakeLists.txt  README.md
test_avio/: a.cpp  main.cpp
test_decode_video_h264/: main.cpp
test_demux_video_get_h264_packet_from_mp4/: main.cpp
test_demux_video_mp4/: main.cpp
test_encode_audio_pcm2aac/: main.cpp
test_encode_video_yuv2h264/: main.cpp
test_muxing_flv_yuv2h264_pcm2aac/: main.cpp
test_muxing_mp4_yuv2h264_pcm2aac/: Muxer.h
